<resources>
    <string name="app_name">Wellington Ultimate App</string>
    <string name="hello_first_fragment">st1</string>
    <string name="next">st2</string>
    <string name="previous">st3</string>
    <string name="action_settings">st4</string>
    <string name="first_fragment_label">st5</string>
    <string name="second_fragment_label">st6</string>
    <string name="title_display_user_activity">test_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Devon Melvor</string>
    <string name="nav_header_subtitle">devon.melvor@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_events">Events</string>
    <string name="menu_upcoming_games">Games - Upcoming</string>
    <string name="menu_missing_result_games">Games - Missing Results</string>
    <string name="menu_games">Games</string>
    <string name="title_activity_display_event_teams">DisplayEventTeamsActivity</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standings_team_name_title">Team</string>
    <string name="standings_team_record_title">Record</string>
    <string name="standings_team_spirit_title">Spirit</string>
    <string name="standings_team_pointdiff_title">Point Diff</string>
    <string name="description_back_button">back button</string>
    <string name="REQUEST_SCHEDULED_GAMES">request_scheduled_games</string>
    <string name="MESSAGE_LOGINTOKEN">LOGINTOKEN</string>
    <string name="MESSAGE_GAME">GAME</string>
</resources>