<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/user_nav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="Dashboard" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_upcoming_games"
            android:title="@string/menu_upcoming_games" />
        <item
            android:id="@+id/nav_missing_result_games"
            android:title="@string/menu_missing_result_games" />
    </group>
</menu>